Fixed search bar added grey background and aligned magnify glass

--- a/main.css
+++ b/main.css
@@ -1,10 +1,8 @@
-/** {
-  border: 1px dotted red;
-}*/
+
 
 ul {
   list-style-type: none;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 header {
@@ -46,6 +44,8 @@ header {
 
 .navbar li a {
   text-decoration: none;
+  color: #6A6A6A;
+  font-size: 18px;
 }
 
 #signReg {
@@ -88,11 +88,23 @@ header {
 }
 
 #searchBar {
+  position: relative;
   display: inline-block;
 }
 
-#searchbox {
-  position: relative;
+#greyBox {
+  background: #F3F3F3;
+  width: 173px;
+  border: none;
+  border-radius: 3px;
+  padding: 3px;
+}
+
+#searchBar span {
+  color: #B1B1B1;
+  position: absolute;
+  top: 6px;
+  left: 26px;
 }
 
 #searchIcon {
@@ -102,27 +114,37 @@ header {
   background-size: 400px 200px;
   width: 13px;
   height: 13px;
-  top: 10px;
+  top: 8px;
+  left: 8px;
+}
+
+#searchIcon span {
+  position: relative;
 }
 
 #tieSection {
   background: #F4F4F4;
-  margin: 0 20px;
+  margin: 35px 20px 0 0;
   height: 400px;
 }
 
 #tieSection h1{
   text-align: center;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 50px;
+}
+
+.allTies {
+  margin-left: 146px;
 }
 
 .tieImage {
   display: inline-block;
+  margin-left: 20px;
 }
 
 .tieImage img {
-  width: 70px;
+  width: 80px;
 }
 
 .tieImage p {
@@ -151,7 +173,7 @@ header {
 
 blockquote {
   font-size: 35px;
-  font-family: 'Raleway', sans-serif;;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   text-align: center;
   margin: 100px 103px 100px 0;
 }
@@ -194,7 +216,7 @@ blockquote span {
 .column4 p {
   margin: 0;
   width: 200px;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   font-size: 12px;
 }
 
@@ -211,51 +233,6 @@ blockquote span {
 #loopUs {
   position: absolute;
   bottom: 43px;
-}
-
-#quarterly {
-  position: absolute;
-  bottom: 24px;
-  left: 180px;
-}
-
-#quarterly p {
-  padding-bottom: 14px;
-}
-
-#innerBox {
-  padding: 5px;
-}
-
-#subscribe {
-  background: #F3F3F3;
-  width: 181px;
-  border: none;
-  border-radius: 3px;
-  padding: 3px;
-}
-
-#style {
-  position: absolute;
-  bottom: -14px;
-  left: 365px;
-}
-
-#style a {
-  color: #61B6FF;
-}
-
-.column4 form {
-  padding-top: 10px;
-}
-
-#button {
-  background: #299FFF;
-  border: none;
-  border-radius: 3px;
-  font-family: 'Raleway', sans-serif; 
-  font-size: 12px;
-  color: #fff;
 }
 
 .socialIcons {
@@ -286,6 +263,51 @@ blockquote span {
   background-size: 400px 200px;
   width: 35px;
   height: 35px;
+}
+
+#quarterly {
+  position: absolute;
+  bottom: 24px;
+  left: 180px;
+}
+
+#quarterly p {
+  padding-bottom: 14px;
+}
+
+#innerBox {
+  padding: 5px;
+}
+
+#outerBox {
+  background: #F3F3F3;
+  width: 181px;
+  border: none;
+  border-radius: 3px;
+  padding: 3px;
+}
+
+#style {
+  position: absolute;
+  bottom: -14px;
+  left: 365px;
+}
+
+#style a {
+  color: #61B6FF;
+}
+
+.column4 form {
+  padding-top: 10px;
+}
+
+#button {
+  background: #299FFF;
+  border: none;
+  border-radius: 3px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
+  font-size: 12px;
+  color: #fff;
 }
 
 footer {
@@ -363,7 +385,7 @@ footer {
   background: #33A1FF;
   padding: 10px;
   width: 120px;
-  border: none;
+  border: 1px solid #278CE2;
   border-radius: 3px;
   color: #fff;
 }
@@ -373,6 +395,7 @@ footer {
   display: inline-block;
   color: #8B8B8B;
   font-size: 13px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 #copyright {
@@ -384,4 +407,12 @@ footer {
   display: inline-block;
 }
 
-
+.perforatedBottom:before {
+  content:"";
+  width: 100%;
+  height: 0;
+  background-image:url(images/perforated-bottom@2x.png);
+  background-repeat:repeat-x;
+  float: left;
+  padding: 4px 0;
+}
